6-add-search: Add Search
* Add search field above table and hook up
* Add "add" button above table
* Add spinner overlay component
* Fix amplify config for typescript

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,18 @@ table.table tbody tr td {
   box-shadow: none;
 }
 
+.spinner-overlay {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
 [data-amplify-authenticator] {
   align-items: center;
   display: flex;
