Role-based access
* Edit schema permissions
* Hide various UI components based on cognito group
* Add some additional toasts

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ table.table tbody tr td {
   box-shadow: none;
 }
 
+.toast.show {
+  z-index: 1060;
+}
+
 .spinner-overlay {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
